// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LineScale Line Scale Almost At Left Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 1% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 1%;
  margin-right: 1%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 1%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(1% - 6px);
  margin-right: calc(1% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              1.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 1.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale Almost At Right Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 99% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 99%;
  margin-right: 99%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 99%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(99% - 6px);
  margin-right: calc(99% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              99.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          Lowest value
        </div>
        <div
          className="c12"
        >
          Highest value
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 99.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale At Left Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 0% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 0%;
  margin-right: 0%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 0%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(0% - 6px);
  margin-right: calc(0% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              0.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 0.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale At Right Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 100% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 100%;
  margin-right: 100%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 100%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(100% - 6px);
  margin-right: calc(100% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              100.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 100.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale In The Middle With Knobs 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 50% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #FF0000;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 50%;
  margin-right: 50%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 50%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(50% - 6px);
  margin-right: calc(50% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #FF0000;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              50
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 50.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale Near Left Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 5% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 5%;
  margin-right: 5%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 5%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(5% - 6px);
  margin-right: calc(5% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              5.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          Lowest value
        </div>
        <div
          className="c12"
        >
          Highest value
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 5.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale Near Left Edge With Bigger Label 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 5% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 5%;
  margin-right: 5%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 5%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(5% - 6px);
  margin-right: calc(5% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              Latest 5.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 5.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale Near Right Edge 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 95% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 95%;
  margin-right: 95%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 95%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(95% - 6px);
  margin-right: calc(95% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              95.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 95.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | LineScale Line Scale Near Right Edge With Bigger Label 1`] = `
.c1 {
  margin-top: 32px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  box-sizing: border-box;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  left: -6px;
}

.c5 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 100%;
  margin-bottom: 12px;
  pointer-events: none;
  right: -6px;
}

.c9 {
  position: relative;
  bottom: 100%;
  margin: 0 95% 12px;
  padding: 2px 6px;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  height: 16px;
  white-space: nowrap;
  text-align: center;
  background: #009195;
  color: #FFFFFF;
}

.c13 {
  position: relative;
  bottom: -32px;
  margin-left: 95%;
  margin-right: 95%;
  -webkit-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  -ms-transform: translateX(-50%) translateY(-100%) translateY(-10px);
  transform: translateX(-50%) translateY(-100%) translateY(-10px);
  padding: 2px 6px;
  white-space: nowrap;
  text-align: center;
  color: #6E6E69;
}

.c2 {
  position: relative;
}

.c8 {
  position: relative;
  height: 2px;
  background-color: #000000;
  margin-bottom: 8px;
}

.c8::before {
  display: block;
  content: '';
  position: absolute;
  bottom: -24px;
  margin-left: 95%;
  width: 0px;
  height: 56px;
  border-left: 1px dashed #6E6E69;
}

.c8::after {
  display: block;
  content: '';
  position: absolute;
  bottom: 100%;
  margin-bottom: 4px;
  margin-left: calc(95% - 6px);
  margin-right: calc(95% - 6px);
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #009195;
}

<span
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5"
      />
      <div
        className="c6"
      >
        <div
          className="c7 c8"
        >
          <span
            className="c9"
          >
            <span
              className="c10"
            >
              Latest 95.00
            </span>
          </span>
        </div>
      </div>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          0
        </div>
        <div
          className="c12"
        >
          100
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <span
            className="c13"
          >
            <span
              className="c0"
            >
              Average for category 95.00
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</span>
`;
